fix z-index position on footer

--- a/src/views/Footer.css
+++ b/src/views/Footer.css
@@ -9,6 +9,7 @@
 }
 
 .footer-up {
+  z-index: 2;
   display: flex;
   justify-content: center;
   position: relative;
